--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -1,3 +1,99 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  @apply bg-crayola;
+}
+.bef-linear-gradient::before {
+  background-color: transparent;
+  background-image: linear-gradient(180deg, #00000000 13%, #30393fd9 67%);
+}
+/* .gradieant-header{ */
+/* @apply relative before:absolute before:top-0 before:left-0 before:content-['']; */
+/* } */
+.gradieant-header {
+  @apply before:-z-1 before:absolute before:left-0 before:top-0 before:h-full before:w-full before:bg-black/20 before:content-[''];
+  --background-overlay: "";
+  background-image: linear-gradient(180deg, #0f5050 0%, #0f5050ed 1%);
+}
+.bg-before {
+  @apply relative before:absolute before:left-0 before:top-0 before:z-0 before:h-full before:w-full before:content-[''];
+}
+.bg-before::before {
+  background-color: transparent;
+  background-image: linear-gradient(180deg, #00000000 13%, #30393fd9 67%);
+}
+.bg-svg-blur {
+  transform: rotate(30deg);
+  opacity: 0.6;
+}
+.bg-svg-blur-fs {
+  opacity: 0.3;
+}
+.bg-svg-blur svg,
+.bg-svg-blur {
+  -webkit-filter: blur(140px);
+  -moz-filter: blur(140px);
+  -o-filter: blur(140px);
+  -ms-filter: blur(140px);
+  filter: blur(140px);
+}
+/* .qx-marquee { */
+/* display: inline-block; */
+/* white-space: nowrap; */
+/* position: relative; */
+/* transform: translate3d(0%, 0, 0); */
+/* animation-name: marquee; */
+/* animation-timing-function: linear; */
+/* animation-iteration-count: infinite; */
+/* animation-duration: 27s; */
+/* } */
+.qx-marquee ul {
+  -webkit-animation: marquee 30s linear infinite running;
+  -moz-animation: marquee 30s linear infinite running;
+  -o-animation: marquee 30s linear infinite running;
+  -ms-animation: marquee 30s linear infinite running;
+  animation: marquee 30s linear infinite running;
+}
+.qx-marquee ul:hover {
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+  -o-animation-play-state: paused;
+  -ms-animation-play-state: paused;
+  animation-play-state: paused;
+}
+
+@keyframes marquee {
+  0% {
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    transform: translate(-50%);
+  }
+}
+
+/* .marquee-wrapper:hover .qx-marquee { */
+/* animation-play-state: paused !important; */
+/* } */
+
+@keyframes marquee {
+  0% {
+    transform: translate3d(0%, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
