--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,22 +62,18 @@ body{
   -ms-filter: blur(140px);
   filter: blur(140px);
 }
-/* .qx-marquee { */
-  /* display: inline-block; */
-  /* white-space: nowrap; */
-  /* position: relative; */
-  /* transform: translate3d(0%, 0, 0); */
-  /* animation-name: marquee; */
-  /* animation-timing-function: linear; */
-  /* animation-iteration-count: infinite; */
-  /* animation-duration: 27s; */
-/* } */
+.marquee-wrapper{
+  @apply before:content-[''] before:w-6 md:before:w-14 xl:before:w-16 before:h-12 md:before:h-24 before:-left-1 md:before:left-0 before:top-4 before:z-10 before:shadow-3xl before:absolute before:bg-crayola;
+}
+.marquee-wrapper{
+  @apply after:content-[''] after:w-6 md:after:w-14 xl:after:w-16 after:h-12 md:after:h-24 after:-right-1 md:after:right-0 after:top-4 after:z-10 after:shadow-5xl after:absolute after:bg-crayola;
+}
 .qx-marquee ul{
-  -webkit-animation: marquee 30s linear infinite running;
-  -moz-animation: marquee 30s linear infinite running;
-  -o-animation: marquee 30s linear infinite running;
-  -ms-animation: marquee 30s linear infinite running;
-  animation: marquee 30s linear infinite running;
+  -webkit-animation: marquee 50s linear infinite running;
+  -moz-animation: marquee 50s linear infinite running;
+  -o-animation: marquee 50s linear infinite running;
+  -ms-animation: marquee 50s linear infinite running;
+  animation: marquee 50s linear infinite running;
 }
 .qx-marquee ul:hover{
   -webkit-animation-play-state: paused;
@@ -104,10 +100,6 @@ body{
   }
 }
 
-/* .marquee-wrapper:hover .qx-marquee { */
-  /* animation-play-state: paused !important; */
-/* } */
-
 @keyframes marquee {
   0% {
       transform: translate3d(0%, 0, 0);
@@ -116,4 +108,46 @@ body{
   100% {
       transform: translate3d(-100%, 0, 0);
   }
+}
+
+.text-gradient{
+  background: linear-gradient(360deg, #F89D35 0%, #F86058 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.gradient-style{
+  background: linear-gradient(180deg, #8C51D53A  0%,#46296B3A  100%);
+}
+.gradient-style-one{
+  background: linear-gradient(180deg, #CDB96733  0%,#675D3433  100%);
+}
+.gradient-colors{
+  background: linear-gradient(90deg, #F1776F  0%,#DBC28A  51.39%,#54C0BD  100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text-gradient .main-title {
+  background: linear-gradient(180deg, rgba(177, 86, 171, 1) 25%, rgba(30, 196, 196, 1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+}
+
+ .main-title {
+  background: linear-gradient(180deg, rgba(177, 86, 171, 1) 25%, rgba(30, 196, 196, 1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+}
+.badges-gradient{
+  background: linear-gradient(200deg, #A5FFED  0%,#28928F  100%);
+}
+.overlay-slk{
+  transition: opacity 1s;
+}
+.text-gradient-blue{
+  background: linear-gradient(360deg, #8D65E9  0%,#9BDFF9  100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
